# frontier_exploration

./: .clang-format  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  package.xml
.github/workflows/: ci.yml
exploration/: CMakeLists.txt  package.xml
exploration_msgs/: CMakeLists.txt  package.xml
exploration_msgs/action/: Explore.action
exploration_msgs/srv/: BlacklistPoint.srv  GetNextGoal.srv  SetPolygon.srv
exploration_server/: CMakeLists.txt  README.md  example_plugin.xml  package.xml  planner_plugin.xml
exploration_server/action/: ExplorationTask.action
exploration_server/config/: points.yaml
exploration_server/include/exploration_server/: base_plugin.h  example_plugin.h  exploration_server.h  geometry_tools.h  planner_base.h  planner_plugin.h  plugin_client.h  points.txt  visited_points.h
exploration_server/launch/: exploration.launch  locus_exploration.launch
exploration_server/src/: example_plugin.cpp  exploration_server.cpp  exploration_server_node.cpp  planner_plugin.cpp  plugin_client.cpp
frontier_exploration/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  frontier_plugin.xml  package.xml
frontier_exploration/include/frontier_exploration/: costmap_tools.h  frontier_plugin.h  frontier_search.h  geometry_tools.h
frontier_exploration/launch/: global_map.launch  locus_explore.launch  no_global_map.launch
frontier_exploration/msg/: Frontier.msg
frontier_exploration/src/: explore_client.cpp  explore_server.cpp  frontier_plugin.cpp  frontier_search.cpp
frontier_exploration/src/test/: costmap_tools_tests.cpp  frontier_search_tests.cpp  geometry_tools_tests.cpp
include/frontier_exploration/: bounded_explore_layer.h  costmap_tools.h  frontier_search.h  geometry_tools.h
launch/: explore_client_server.launch  global_map.launch  no_global_map.launch  robot_explore.launch
msg/: Frontier.msg
plugins/: bounded_explore_layer.cpp
polygon_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
polygon_layer/include/polygon_layer/: polygon_layer.h  tf2_polygon.h
polygon_layer/src/: polygon_layer.cpp
robot_explore/: CMakeLists.txt  costmap_plugins.xml  package.xml
robot_explore/action/: ExploreTask.action
robot_explore/config/: explore_costmap.yaml  explore_costmap.yaml~
robot_explore/include/robot_explore/: boundary_layer.h~  bounded_explore_layer.h
robot_explore/launch/: robot_explore.launch
robot_explore/plugins/: bounded_explore_layer.cpp
robot_explore/src/: explore_server.cpp  robot_explore.cpp  robot_explore.cpp.autosave
robot_explore/srv/: GetNextFrontier.srv  GetNextFrontier.srv~  UpdateBoundaryPolygon.srv  UpdateBoundaryPolygon.srv~
src/: explore_client.cpp  explore_server.cpp  frontier_search.cpp
src/test/: costmap_tools_tests.cpp  frontier_search_tests.cpp  geometry_tools_tests.cpp
srv/: ClearCostmapLayer.srv  GetAllFrontiers.srv  GetNextFrontier.srv  UpdateBoundaryPolygon.srv
