<?xml version="1.0"?>
<package>
  <name>frontier_exploration</name>
  <version>0.1.8</version>
  <description>The frontier_exploration package provides a <a href="http://www.ros.org/wiki/costmap_2d">costmap_2d</a> layer plugin that implements helper functions required for frontier exploration. An <a href="http://www.ros.org/wiki/actionlib">actionlib</a>) server and client are also provided as an implementation example.</description>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>common_msgs</build_depend>
  <run_depend>common_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
