<?xml version="1.0"?>
<package>
  <name>frontier_exploration</name>
  <version>0.3.1</version>
  <description>Implementation of <a href = "http://www.robotfrontier.com/papers/cira97.pdf">frontier exploration</a> for ROS, extending on the existing navigation stack (costmap_2d, move_base).
  It accepts exploration goals via <a href="http://www.ros.org/wiki/actionlib">actionlib</a> (Rviz UI provided), sends movement commands to <a href="http://www.ros.org/wiki/move_base">move_base</a>.</description>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <url type="website">http://ros.org/wiki/frontier_exploration</url>
  <url type="bugtracker">https://github.com/paulbovbel/frontier_exploration/issues</url>
  <url type="repository">https://github.com/paulbovbel/frontier_exploration</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>libpcl-all</run_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
