<?xml version="1.0"?>
<package format="2">
  <name>exploration</name>
  <version>0.3.0</version>
  <description>Exploration framework for the ROS navigation stack</description>

  <license>Proprietary</license>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>exploration_msgs</exec_depend>
  <exec_depend>exploration_server</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
