<?xml version="1.0"?>
<package format="2">
  <name>polygon_layer</name>
  <version>0.4.2</version>
  <description>Costmap 2D Layer plugin for drawing a polygonal boundary.</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="vickymmcd@gmail.com">Vicky McDermott</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <url type="website">http://ros.org/wiki/polygon_layer</url>
  <url type="bugtracker">https://github.com/paulbovbel/frontier_exploration/issues</url>
  <url type="repository">https://github.com/paulbovbel/frontier_exploration</url>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>exploration_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
