<?xml version="1.0"?>
<package>
  <name>robot_explore</name>
  <version>0.0.1</version>
  <description>The robot_explore package</description>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>


  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
